# sumcheck_protocol

./: Makefile  README.md  field.py  main.py  polynomial.py  pyproject.toml  sumcheck.py  test.py
sumcheck_protocol/: field.py  polynomial.py  sumcheck.py
tests/: conftest.py  test_field.py  test_polynomial.py  test_sumcheck.py
